@@ -14,9 +14,14 @@ import com.kitty.blog.domain.repository.RoleRepository;
 import com.kitty.blog.domain.repository.SystemMessageRepository;
 import com.kitty.blog.domain.repository.UserRepository;
 import com.kitty.blog.domain.repository.UserRoleRepository;
+import com.kitty.blog.infrastructure.utils.PageUtil;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.messaging.simp.SimpMessagingTemplate;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.parameters.P;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -136,89 +141,84 @@ public class WebSocketService {
     }
 
     @Transactional
-    public List<SystemMessageDto> getSystemMessages() {
-        List<SystemMessage> systemMessages = systemMessageRepository.findAllByOrderByCreatedAtDesc();
-        return systemMessages.stream()
-                .map(systemMessage -> {
-                    SystemMessageDto dto = new SystemMessageDto();
-                    dto.setId(systemMessage.getId());
-                    dto.setTargetRole(systemMessage.getTargetRole());
-                    dto.setMessage(systemMessage.getMessage());
-                    dto.setSenderId(systemMessage.getSenderId());
+    public Page<SystemMessageDto> getSystemMessages(Integer page, Integer size, String[] sort) {
+        PageRequest pageRequest = PageUtil.createPageRequest(page, size, sort);
+        Page<SystemMessage> systemMessages = systemMessageRepository.findAllByOrderByCreatedAtDesc(pageRequest);
 
-                    User user = userRepository.findById(systemMessage.getSenderId()).orElse(null);
-                    dto.setSenderName(user.getUsername());
+        return systemMessages.map(systemMessage -> {
+            SystemMessageDto dto = new SystemMessageDto();
+            dto.setId(systemMessage.getId());
+            dto.setTargetRole(systemMessage.getTargetRole());
+            dto.setMessage(systemMessage.getMessage());
+            dto.setSenderId(systemMessage.getSenderId());
 
-                    List<UserRole> userRoles = userRoleRepository.findByUserId(systemMessage.getSenderId())
-                            .orElse(new ArrayList<>());
-                    if (userRoles.isEmpty() || userRoles.size() == 0) {
-                        throw new IllegalArgumentException("用户角色为空");
-                    }
-                    List<String> administratorName = new ArrayList<>();
-                    for (UserRole userRole : userRoles) {
-                        com.kitty.blog.domain.model.Role role = roleRepository.findById(userRole.getId().getRoleId())
-                                .orElse(null);
-                        administratorName.add(role.getAdministratorName());
-                    }
-                    dto.setSenderRoles(administratorName);
-                    dto.setCreatedAt(systemMessage.getCreatedAt());
-                    return dto;
-                })
-                .collect(Collectors.toList());
+            User user = userRepository.findById(systemMessage.getSenderId()).orElse(null);
+            dto.setSenderName(user != null ? user.getUsername() : null);
+
+            List<UserRole> userRoles = userRoleRepository.findByUserId(systemMessage.getSenderId())
+                    .orElse(new ArrayList<>());
+            if (userRoles.isEmpty()) {
+                throw new IllegalArgumentException("用户角色为空");
+            }
+            List<String> administratorName = new ArrayList<>();
+            for (UserRole userRole : userRoles) {
+                roleRepository.findById(userRole.getId().getRoleId()).ifPresent(role -> administratorName.add(role.getAdministratorName()));
+            }
+            dto.setSenderRoles(administratorName);
+            dto.setCreatedAt(systemMessage.getCreatedAt());
+            return dto;
+        });
     }
 
     @Transactional
-    public List<SystemMessageDto> getUserSystemMessages(LoginResponseDto user) {
-        // 获取用户所有角色
+    public Page<SystemMessageDto> getUserSystemMessages(LoginResponseDto user, Integer page, Integer size,
+            String[] sort) {
         List<String> userRoles = user.getAuthorities().stream()
-                .map(authority -> authority.getAuthority())
+                .map(GrantedAuthority::getAuthority)
                 .collect(Collectors.toList());
 
-        // 查询所有角色对应的系统消息
-        List<SystemMessage> systemMessages = systemMessageRepository
-                .findByTargetRoleInOrderByCreatedAtDesc(userRoles);
+        PageRequest pageRequest = PageUtil.createPageRequest(page, size, sort);
+        Page<SystemMessage> systemMessages = systemMessageRepository
+                .findByTargetRoleInOrderByCreatedAtDesc(userRoles, pageRequest);
 
-        return systemMessages.stream()
-                .map(systemMessage -> {
-                    SystemMessageDto dto = new SystemMessageDto();
-                    dto.setId(systemMessage.getId());
-                    dto.setMessage(systemMessage.getMessage());
-                    dto.setTargetRole(systemMessage.getTargetRole());
-                    dto.setSenderId(systemMessage.getSenderId());
+        return systemMessages.map(systemMessage -> {
+            SystemMessageDto dto = new SystemMessageDto();
+            dto.setId(systemMessage.getId());
+            dto.setMessage(systemMessage.getMessage());
+            dto.setTargetRole(systemMessage.getTargetRole());
+            dto.setSenderId(systemMessage.getSenderId());
 
-                    User sender = userRepository.findById(systemMessage.getSenderId()).orElse(null);
-                    if (sender != null) {
-                        dto.setSenderName(sender.getUsername());
-                        List<UserRole> senderRoles = userRoleRepository.findByUserId(systemMessage.getSenderId())
-                                .orElse(new ArrayList<>());
-                        if (!senderRoles.isEmpty()) {
-                            List<String> administratorNames = senderRoles.stream()
-                                    .map(role -> roleRepository.findById(role.getId().getRoleId())
-                                            .map(r -> r.getAdministratorName())
-                                            .orElse(null))
-                                    .filter(Objects::nonNull)
-                                    .collect(Collectors.toList());
-                            dto.setSenderRoles(administratorNames);
-                        }
-                    }
-                    dto.setCreatedAt(systemMessage.getCreatedAt());
-                    // 修改已读状态的判断逻辑
-                    boolean isRead = false;
-                    if (systemMessage.getReadUserIds() != null && !systemMessage.getReadUserIds().isEmpty()) {
-                        isRead = Arrays.stream(systemMessage.getReadUserIds().split(","))
-                                .filter(s -> !s.isEmpty())
-                                .anyMatch(readUserId -> readUserId.equals(user.getId().toString()));
-                    }
-                    dto.setRead(isRead);
-                    return dto;
-                })
-                .collect(Collectors.toList());
+            User sender = userRepository.findById(systemMessage.getSenderId()).orElse(null);
+            if (sender != null) {
+                dto.setSenderName(sender.getUsername());
+                List<UserRole> senderRoles = userRoleRepository.findByUserId(systemMessage.getSenderId())
+                        .orElse(new ArrayList<>());
+                if (!senderRoles.isEmpty()) {
+                    List<String> administratorNames = senderRoles.stream()
+                            .map(role -> roleRepository.findById(role.getId().getRoleId())
+                                    .map(com.kitty.blog.domain.model.Role::getAdministratorName)
+                                    .orElse(null))
+                            .filter(Objects::nonNull)
+                            .collect(Collectors.toList());
+                    dto.setSenderRoles(administratorNames);
+                }
+            }
+            dto.setCreatedAt(systemMessage.getCreatedAt());
+
+            boolean isRead = false;
+            if (systemMessage.getReadUserIds() != null && !systemMessage.getReadUserIds().isEmpty()) {
+                isRead = Arrays.stream(systemMessage.getReadUserIds().split(","))
+                        .filter(s -> !s.isEmpty())
+                        .anyMatch(readUserId -> readUserId.equals(user.getId().toString()));
+            }
+            dto.setRead(isRead);
+            return dto;
+        });
     }
 
     @Transactional
     private boolean isValidRole(String role) {
-        return Arrays.asList(Role.class.getDeclaredFields())
-                .stream()
+        return Arrays.stream(Role.class.getDeclaredFields())
                 .map(field -> {
                     try {
                         return (String) field.get(null);
@@ -227,7 +227,7 @@ public class WebSocketService {
                     }
                 })
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList())
+                .toList()
                 .contains(role);
     }
 
@@ -272,8 +272,7 @@ public class WebSocketService {
         }
         readUserIds.remove(userId.toString());
 
-        String newReadUserIds = readUserIds.isEmpty() ? "" :
-                String.join(",", readUserIds);
+        String newReadUserIds = readUserIds.isEmpty() ? "" : String.join(",", readUserIds);
         message.setReadUserIds(newReadUserIds);
         systemMessageRepository.save(message);
 
@@ -293,9 +292,7 @@ public class WebSocketService {
                     Map.of(
                             "message", message,
                             "type", type,
-                            "data", data
-                    )
-            );
+                            "data", data));
         } catch (Exception e) {
             log.error("Failed to send notification to user {}: {}", userId, e.getMessage());
         }
